# nicol_rh8d

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  environment.yml  main.c  nodelet_plugins.xml  package.xml  simple_Intel_RealSense_Depth_Camera_D435.stl
atxmega_qenc/: atxmega_qenc.atsln
atxmega_qenc/atxmega_qenc/: atxmega_qenc.componentinfo.xml  atxmega_qenc.cproj
atxmega_qenc/inventor/: Bauteil1.ipt  Bauteil1.stl  amt_dragster.ipt  amt_socket.ipt  cam_holder.iam  cam_holder_angle_part.ipt  cam_holder_angle_part.stl  cam_holder_angle_part_mesh.stl  cam_holder_end_part.ipt  cam_holder_end_part.stl  cam_holder_hog_part.stl  cam_holder_wrist_part.ipt  cam_holder_wrist_part.stl  camm_holder_wrist_part_spacer.stl  foot.ipt  foot.stl  kinect_fixt.iam  kinect_fixt.ipt  kinect_fixt.stl  kinect_fixt_real.stl  kinect_ring.iam  kinect_ring.ipt  kinect_ring.stl  kinect_ring_back.iam  kinect_ring_back.ipt  kinect_ring_back.stl  kinect_ring_fix.iam  kinect_ring_fix.stl  kinect_ring_fixt.ipt  kinect_ring_front.iam  kinect_ring_front.ipt  kinect_ring_front.stl  lockfile.lck  mcu_housing.ipt  mcu_housing.stl  phalanx.iam  pipe_ruler.stl
cfg/: ArucoDetectorConfig.cfg  DetectorConfig.cfg  RH8DDatasetCollectorConfig.cfg  VideoStream.cfg  camcalib_1280x960.yaml  camcalib_640x480.yaml  camera_poses.yaml  detector_params.yaml  hand_ids.yaml  marker_cam.rviz  marker_config.yaml  marker_holder_poses.yml  marker_poses.yml  marker_table_poses.yml  net_config.yaml  post_proc.yaml
datasets/aruco/: camcalib_1280x960.yaml  camcalib_640x480.yaml  custom_matrix_4x4_20_consider_flipped.yml  custom_matrix_4x4_32_consider_flipped.yml  marker_poses.yml
envs/: env_detect_cpu.yml  env_detect_gpu.yml  env_general_cpu.yml  env_general_gpu.yml  env_train_cpu.yml  env_train_gpu.yml
inventor/: Ballbearing.ipt  adapter.ipt  amt103-v unit only.ipt  amt_dragster.stl  amt_plate.ipt  amt_plate.stl  amt_socket.stl  amt_socket_2mm.ipt  amt_socket_2mm.stl  aruco_chip.ipt  aruco_chip.stl  aruco_plate.ipt  aruco_plate.stl  cam_holder.iam  cam_holder.stl  cam_holder_angle_part.ipt  cam_holder_angle_part.stl  cam_holder_angle_part_aligned.iam  cam_holder_end_part.ipt  cam_holder_end_part.stl  cam_holder_end_part_aligned.iam  cam_holder_hog_part.ipt  cam_holder_hog_part.stl  cam_holder_hog_part_aligned.iam  cam_holder_joint1.txt  cam_holder_wrist_part.ipt  cam_holder_wrist_part.stl  cam_holder_wrist_part_aligned.iam  cam_holder_wrist_part_drill_template.iam  cam_holder_wrist_part_drill_template.stl  cam_holder_wrist_part_spacer.ipt  cover.ipt  cover.stl  finger_root_plate.ipt  finger_root_plate.stl  foot.ipt  forearm_plate.ipt  forearm_plate.stl  hand_base.ipt  hand_base.stl  (+34 more)
inventor/OldVersions/: Ballbearing.0004.ipt  amt103-v unit only.0001.ipt  amt_plate.0003.ipt  amt_socket_2mm.0010.ipt  amt_socket_2mm.0011.ipt  aruco_chip.0005.ipt  aruco_plate.0002.ipt  cam_holder.0025.iam  cam_holder.0034.iam  cam_holder.0076.iam  cam_holder.0083.iam  cam_holder.0093.iam  cam_holder.0101.iam  cam_holder.0108.iam  cam_holder_angle_part.0005.ipt  cam_holder_angle_part.0008.ipt  cam_holder_angle_part.0016.ipt  cam_holder_angle_part.0017.ipt  cam_holder_angle_part_aligned.0002.iam  cam_holder_angle_part_aligned.0013.iam  cam_holder_end_part.0011.ipt  cam_holder_end_part.0031.ipt  cam_holder_hog_part.0004.ipt  (+59 more)
launch/: cam_pose.launch  collect_rh8d_dataset.launch  dataset_cameras.launch  demo.launch  detect.launch  marker_cam_model.launch  qdec_detect.launch  realsense.launch  val_model.launch  webcam.launch
meshes/: cam_holder_end_part_mesh.stl  cam_holder_hog_part_mesh.stl  cam_holder_wrist_part_mesh.stl
scripts/: adet.py  aruco_detector.py  camcalib.py  camera_models.py  collect_rh8d_dataset.py  cvToImage.py  dataset_collector.py  detect.py  detect_angle.py  detect_colors.py  gyccel_serial.py  infer.py  interhand_download_script.py  interhand_unzip.sh  join_data.py  keypoint_detect.py  marker_detector.py  move.py  perspective_transform.py  plot_record.py  pose_filter.py  qdec_serial.py  qdec_txrx.py  results.py  rh8d_serial.py  stats.py  test.py  train.py  training_data.py  util.py
src/: video_stream.cpp
urdf/: marker_cam.xacro  rh8d.urdf
(+77 files in other folders)
