<?xml version="1.0"?>
<package format="2">
  <name>nicol_rh8d</name>
  <version>0.0.1</version>
  <description>
  RH8D joint angle inference package.
  </description>
  <license>MIT</license>
  <author email="nicolas.frick@uni-hamburg.de">Nicolas Frick</author>
  <maintainer email="nicolas.frick@uni-hamburg.de">Nicolas Frick</maintainer>
  <url type="repository">https://git.informatik.uni-hamburg.de/</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nicol_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>realsense2_camera</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
